--- a/src/index.css
+++ b/src/index.css
@@ -17,9 +17,21 @@ h1 {
   font-size: 1.5em;
   padding-left: 0.7em;
   margin-top: 0;
+  padding-bottom: 0.4em;
 }
 
 a {
   text-decoration: none;
   color: #cd60ff;
+}
+
+.twoot {
+  border-radius: 25px;
+  background: #cd60ff;
+  padding: 1em;
+  padding-top: 0.3em;
+  margin: 1em;
+  margin-left: 0em; 
+  width: 40em;
+  color: white;
 }
